force-app/main/default/objects/Invoice__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <description>Amount due on invoice</description>
    <inlineHelpText>Amount due on invoice</inlineHelpText>
    <label>Amount Due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>