force-app/main/default/objects/Invoice__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <description>Document number from Netsuite</description>
    <inlineHelpText>Document number from Netsuite</inlineHelpText>
    <label>Document Number</label>
    <type>TextArea</type>
</CustomField>