force-app/main/default/objects/Invoice__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date invoice is paid in full</description>
    <inlineHelpText>Date invoice is paid in full</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>