force-app/main/default/objects/Invoice__c/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <label>Setup Fee</label>
    <summarizedField>Invoice_Line_Items__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Items__c.Product_Name__c</field>
        <operation>contains</operation>
        <value>Setup</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Items__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>