force-app/main/default/objects/Invoice__c/fields/Total_Recurring_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Recurring_Fees__c</fullName>
    <label>Total Recurring Fees</label>
    <summarizedField>Invoice_Line_Items__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Items__c.Description__c</field>
        <operation>notContain</operation>
        <value>Participant</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice_Line_Items__c.Description__c</field>
        <operation>contains</operation>
        <value>(k),RKO,Bundled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice_Line_Items__c.Description__c</field>
        <operation>notContain</operation>
        <value>Setup,Disclosure</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Items__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>